--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,9 @@ repositories {
 
 jmh {
     fork = 1
-    warmupIterations = 1
-    iterations = 1
+    warmupIterations = 2
+    iterations = 10
+    threads = 4
 }
 
 dependencies {
